--- a/dragonpost/templates/layout.html
+++ b/dragonpost/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
     <title>{% block title %}{{ config.name }}{% endblock title %}</title>
 
@@ -10,6 +10,10 @@
 
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     {% block css %}{% endblock css %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    {% block jsstart %}{% endblock jsstart %}
 
     {% block head %}{% endblock head %}
 </head>
@@ -26,6 +30,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    {% block scripts %}{% endblock scripts %}
+    {% block jsend %}{% endblock jsend %}
 </body>
 </html>
