--- a/dragonpost/templates/layout.html
+++ b/dragonpost/templates/layout.html
@@ -13,7 +13,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
-    {% block jsstart %}{% endblock jsstart %}
+    {% block angular %}{% endblock angular %}
 
     {% block head %}{% endblock head %}
 </head>
@@ -30,6 +30,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    {% block jsend %}{% endblock jsend %}
+    {% block scripts %}{% endblock scripts %}
 </body>
 </html>
