--- a/dragonpost/templates/layout.html
+++ b/dragonpost/templates/layout.html
@@ -18,15 +18,38 @@
     {% block head %}{% endblock head %}
 </head>
 <body>
+    <header>
+        {% block header %}
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">{{ config.name }}</a>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="navigation">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                            <li><a href="#">Link</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        {% endblock header %}
+    </header>
+
     <div class="container-fluid">
-        <header>
-            <h1>{{ config.name }}</h1>
-        </header>
-
         {% block content %}{% endblock %}
-
-        <footer></footer>
     </div>
+
+    <footer>
+        {% block footer %}{% endblock footer %}
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
