--- a/dragonpost/templates/layout.html
+++ b/dragonpost/templates/layout.html
@@ -16,10 +16,50 @@
     {% block angular %}{% endblock angular %}
 
     {% block head %}{% endblock head %}
+    <style type="text/css">
+
+      /* Sticky footer styles
+      -------------------------------------------------- */
+
+      html,
+      body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 60px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+      }
+
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
+    </style>
 </head>
 <body>
-    <header>
-        {% block header %}
+    <div id="wrap">
+        <header>
+            {% block header %}
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container-fluid">
                     <div class="navbar-header">
@@ -40,15 +80,15 @@
                     </div>
                 </div>
             </nav>
-        {% endblock header %}
-    </header>
+            {% endblock header %}
+        </header>
 
-    <div class="container-fluid">
-        {% block content %}{% endblock %}
+        <div class="container-fluid">
+            {% block content %}{% endblock %}
+        </div>
     </div>
-
-    <footer>
-        {% block footer %}{% endblock footer %}
+    <footer id="footer">
+        {% block footer %}<div class="container-fluid"><p>This is ye olde footer</p></div>{% endblock footer %}
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
