--- a/dragonpost/templates/layout.html
+++ b/dragonpost/templates/layout.html
@@ -17,45 +17,6 @@
     {% block angular %}{% endblock angular %}
 
     {% block head %}{% endblock head %}
-    <style type="text/css">
-
-      /* Sticky footer styles
-      -------------------------------------------------- */
-
-      html,
-      body {
-        height: 100%;
-        /* The html and body elements cannot have any padding or margin. */
-      }
-
-      /* Wrapper for page content to push down footer */
-      #wrap {
-        min-height: 100%;
-        height: auto !important;
-        height: 100%;
-        /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
-      }
-
-      /* Set the fixed height of the footer here */
-      #push,
-      #footer {
-        height: 60px;
-      }
-      #footer {
-        background-color: #f5f5f5;
-      }
-
-      /* Lastly, apply responsive CSS fixes as necessary */
-      @media (max-width: 767px) {
-        #footer {
-          margin-left: -20px;
-          margin-right: -20px;
-          padding-left: 20px;
-          padding-right: 20px;
-        }
-      }
-    </style>
 </head>
 <body>
     <div id="wrap">
@@ -89,7 +50,7 @@
         </div>
     </div>
     <footer id="footer">
-        {% block footer %}<div class="container-fluid"><p>This is ye olde footer</p></div>{% endblock footer %}
+        <div class="container-fluid">{% block footer %}<p>Dragonpost 2014</p>{% endblock footer %}</div>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
